[gd_scene load_steps=2 format=3 uid="uid://dgj6h7k8l5nap"]

[ext_resource type="Script" uid="uid://cyuo8nwn3avyk" path="res://Common/UI/health_display/health_display.gd" id="1_health_display"]

[node name="HealthDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 30.0
script = ExtResource("1_health_display")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1
